css/main.css
/* ... */
@media screen and (max-width: 991px) {
  .section.footer-section {
    padding-top: 60px;
  }
  .section.mobile-overflow {
    padding-top: 60px;
    padding-bottom: 60px;
  }
  .flexbox.footer {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }
  .hero-section {
    min-height: auto;
    padding-top: 90px;
    padding-bottom: 90px;
  }
  .hero-section__left-block {
    min-width: 322px;
    margin-bottom: 40px;
  }

  .hero-section__heading {
    width: auto;
    font-size: 60px;
  }
  .paragraph {
    font-size: 18px;
  }
  .button {
    padding: 12px 30px;
    line-height: 160%;
  }
  .ghost-button {
    margin-left: 25px;
    padding: 12px 30px;
    line-height: 160%;
    font-weight: 500;
  }
  .cta-block {
    min-width: 340px;
  }
  .heading-2 {
    font-size: 35px;
  }
  .footer-column {
    width: auto;
    margin-right: 30px;
    margin-left: 0px;
  }
  .footer-column.first {
    max-width: 130px;
  }
  .footer-column.hide {
    display: none;
  }
  .text-block-3 {
    margin-top: 60px;
  }
  .hero-section__right-block__image {
    max-width: 317px;
  }
}

@media screen and (max-width: 767px) {
  .section.cta-section {
    padding-top: 30px;
    padding-bottom: 30px;
  }
  .flexbox.cta-flexbox {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    margin: auto;
  }
  .flexbox.footer {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
  .flexbox.hero-flexbox {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
  .hero-section {
    padding-top: 60px;
    padding-bottom: 60px;
  }
  .div-block-1 {
    max-width: 580px;
  }
  .cta-block {
    max-width: 430px;
    min-width: 340px;
    margin-top: 30px;
    margin-bottom: 30px;
    margin-left: 0px;
    text-align: center;
  }
  .heading-2 {
    text-align: center;
  }
  .div-block-3 {
    margin-top: 30px;
    margin-right: auto;
    margin-left: auto;
  }
  .footer-column {
    margin-bottom: 30px;
  }
  .nav-link {
    padding-top: 20px;
    padding-right: 0px;
    padding-left: 0px;
    border: 1px none #000;
  }
  .nav-link:hover {
    border: 1px none #000;
  }
  .nav-link-copy {
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: 0px;
  }
  .icon {
    color: rgba(235, 237, 239, 0.7);
  }
  .menu-button {
    margin-top: 20px;
  }
  .menu-button.w--open {
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    background-color: #2b353e;
  }
  .nav-menu {
    padding: 30px 60px;
    background-color: #2b353e;
  }
  .nav-menu:hover {
    border-bottom: 1px none #000;
  }
}

@media screen and (max-width: 479px) {
  .section.cta-section {
    padding-right: 30px;
    padding-left: 30px;
  }
  .section.footer-section {
    padding: 30px;
  }
  .section.mobile-overflow {
    overflow: hidden;
    padding: 31px;
  }

  .hero-section {
    padding-right: 30px;
    padding-left: 30px;
  }

  .hero-section__heading {
    font-size: 14vw;
    text-align: center;
  }
  .button {
    display: block;
    max-width: 260px;
  }
  .ghost-button {
    display: block;
    max-width: 260px;
    margin-top: 20px;
    margin-left: 0px;
  }
  .cta-block {
    min-width: auto;
  }
  .heading-2 {
    font-size: 27px;
  }
  .text-block {
    margin-top: 10px;
  }
  .navbar {
    padding-right: 30px;
    padding-left: 30px;
  }

  .hero-section__right-block__image {
    max-width: 100%;
  }

  .hero-section__left-block {
    text-align: center;
    margin-right: 0;
    text-align: -webkit-center;
  }

  .card-btn {
    transform: translate(10%, 140%);
  }
}

